--- a/Editor/pshsceneimporter.Editor.asmdef
+++ b/Editor/pshsceneimporter.Editor.asmdef
@@ -1,14 +1,18 @@
 {
-  "name": "pshsceneimporter.Editor",
-  "references": [
-    "pshsceneimporter"
-  ],
-  "includePlatforms": [],
-  "excludePlatforms": [],
-  "allowUnsafeCode": false,
-  "autoReferenced": true,
-  "overrideReferences": false,
-  "precompiledReferences": [],
-  "defineConstraints": [],
-  "optionalUnityReferences": []
+    "name": "pshsceneimporter.Editor",
+    "rootNamespace": "",
+    "references": [
+        "pshsceneimporter"
+    ],
+    "includePlatforms": [
+        "Editor"
+    ],
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": true,
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
